# law-faq

./: .env.example  .gitignore  README.md  pyproject.toml
src/taiwan_law_rag/: __init__.py  api.py  cli.py  config.py  documents.py  fts_store.py  ingest.py  model_catalog.py  models.py  ollama.py  parser.py  rag.py  sources.py  store.py
src/taiwan_law_rag/web/: index.html
tests/: test_api.py  test_config.py  test_fts_store.py  test_model_catalog.py  test_ollama.py  test_parser.py  test_rag.py  test_store.py
tests/fixtures/: sample.xml
